--- a/src/scss/components/_newsletter.scss
+++ b/src/scss/components/_newsletter.scss
@@ -4,12 +4,15 @@
 
 .newsletter {
   background-color: v.$white;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 
   &__illustration {
     order: 1;
     width: 100%;
     height: 300px;
-    background: url(../img/illustration-sign-up-mobile.svg) no-repeat;
+    background: center top/contain url(../img/illustration-sign-up-mobile.svg)
+      no-repeat;
 
     @include m.breakpoint-md() {
       height: initial;
@@ -19,9 +22,13 @@
   }
 
   &__article {
-    padding: 2rem;
+    padding: 2.5rem;
     font: t.$font-size-paragraph 'Roboto', sans-serif;
     color: v.$charcoal-grey;
+
+    @include m.breakpoint-sm() {
+      padding: 5rem;
+    }
 
     @include m.breakpoint-md() {
       padding: 8rem 0 8rem 6rem;
